// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "overflow": "hidden",
    }
  }
>
  <RNCWebView
    cacheEnabled={true}
    javaScriptEnabled={true}
    messagingEnabled={false}
    onLoadingError={[Function]}
    onLoadingFinish={[Function]}
    onLoadingProgress={[Function]}
    onLoadingStart={[Function]}
    onMessage={[Function]}
    onShouldStartLoadWithRequest={[Function]}
    source={
      Object {
        "baseUrl": "http://whitehouse.gov",
        "html": "<b>yo</b>",
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
          "overflow": "hidden",
        },
        Object {
          "backgroundColor": "#ffffff",
        },
        undefined,
      ]
    }
    useSharedProcessPool={true}
  />
</View>
`;

exports[`the works 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "overflow": "hidden",
    }
  }
>
  <RNCWebView
    allowsBackForwardNavigationGestures={true}
    androidHardwareAccelerationDisabled={false}
    cacheEnabled={true}
    domStorageEnabled={false}
    incognito={false}
    javaScriptEnabled={true}
    keyboardDisplayRequiresUserAction={false}
    messagingEnabled={true}
    onError={[Function]}
    onLoad={[Function]}
    onLoadEnd={[Function]}
    onLoadProgress={[Function]}
    onLoadStart={[Function]}
    onLoadingError={[Function]}
    onLoadingFinish={[Function]}
    onLoadingProgress={[Function]}
    onLoadingStart={[Function]}
    onMessage={[Function]}
    onNavigationStateChange={[Function]}
    onShouldStartLoadWithRequest={[Function]}
    source={
      Object {
        "body": "{}",
        "headers": Object {
          "X-Hello": "hi",
        },
        "method": "POST",
        "uri": "http://www.ebay.com/",
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
          "overflow": "hidden",
        },
        Object {
          "backgroundColor": "#ffffff",
        },
        Object {
          "margin": "auto",
        },
      ]
    }
    thirdPartyCookiesEnabled={true}
    useSharedProcessPool={true}
  />
</View>
`;
